--- a/css/examples.css
+++ b/css/examples.css
@@ -2,18 +2,18 @@
 /* Reset CSS
  * --------------------------------------- */
 @font-face {
-	font-family: 'NEXON Lv1 Gothic Low OTF'; src: url("../font/NEXON Lv1 Gothic Low OTF Light.woff") format('woff');
+	font-family: 'NEXON'; src: url("../font/NEXON Lv1 Gothic Low OTF Light.woff") format('woff');
 	font-weight: 400;
 }
 @font-face {
-	font-family: 'NEXON Lv1 Gothic Low OTF'; src: url("../font/NEXON Lv1 Gothic Low OTF.woff") format('woff');
+	font-family: 'NEXON'; src: url("../font/NEXON Lv1 Gothic Low OTF.woff") format('woff');
 	font-weight: 500;
 }
 @font-face {
-	font-family: 'NEXON Lv1 Gothic Low OTF'; src: url("../font/NEXON Lv1 Gothic Low OTF Bold.woff") format('woff');
+	font-family: 'NEXON'; src: url("../font/NEXON Lv1 Gothic Low OTF Bold.woff") format('woff');
 	font-weight: 700;
 }
-body {font-family:"NEXON Lv1 Gothic Low OTF", sans-serif;}
+body {font-family:"NEXON", sans-serif;}
 
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
 form,fieldset,input,textarea,p,blockquote,th,td {
@@ -62,13 +62,13 @@ abbr,acronym { border: 0;
 /* Custom CSS
  * --------------------------------------- */
 body{
-	font-size:16px;
+	font-size:10px;
 	color: #000;
 }
 .wrap{
 	margin-left: auto;
 	margin-right: auto;
-	width: 960px;
+	width: 96rem;
 	position: relative;
 }
 .intro p{
@@ -81,7 +81,7 @@ body{
 }
 #menu li {
 	display:inline-block;
-	margin: 10px;
+	margin: 1rem;
 	color: #000;
 	background:#fff;
 	background: rgba(255,255,255, 0.5);
@@ -105,7 +105,7 @@ body{
 }
 #menu li a,
 #menu li.active a{
-	padding: 9px 18px;
+	padding: 0.9rem 1.8rem;
 	display:block;
 }
 #menu li.active a{
@@ -115,7 +115,7 @@ body{
 	position:fixed;
 	top:0;
 	left:0;
-	height: 40px;
+	height: 4rem;
 	z-index: 70;
 	width: 100%;
 	padding: 0;
@@ -124,12 +124,12 @@ body{
 .twitter-share-button{
 	position: fixed;
 	z-index: 99;
-	right: 149px;
-	top: 9px;
+	right: 14.9rem;
+	top: 0.9rem;
 }
 #download{
-	margin: 10px 0 0 0;
-	padding: 15px 10px;
+	margin: 1rem 0 0 0;
+	padding: 1.5rem 1rem;
 	color: #fff;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 	background-color: #49afcd;
@@ -170,7 +170,7 @@ body{
 	transition: background-position .1s linear;
 }
 #infoMenu{
-	height: 20px;
+	height: 2rem;
 	color: #f2f2f2;
 	position:fixed;
 	z-index:70;
@@ -178,14 +178,14 @@ body{
 	width:100%;
 	text-align:right;
 	font-size:0.9em;
-	padding:8px 0 8px 0;
+	padding:0.8rem 0 0.8rem 0;
 }
 #infoMenu ul{
-	padding: 0 40px;
+	padding: 0 4rem;
 }
 #infoMenu li a{
 	display: block;
-	margin: 0 22px 0 0;
+	margin: 0 2.2rem 0 0;
 	color: #333;
 }
 #infoMenu li a:hover{
@@ -201,12 +201,12 @@ body{
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
-	padding: 20px;
+	padding: 2rem;
 	float: left;
 	position: absolute;
-	bottom: 29px;
+	bottom: 2.9rem;
 	right: 0;
-	width:638px;
+	width:63.8rem;
 	text-align:left;
 }
 #examplesList ul{
@@ -214,7 +214,7 @@ body{
 }
 #examplesList ul li{
 	display:block;
-	margin: 5px 0;
+	margin: 0.5rem 0;
 }
 #examplesList ul li a{
 	color: #BDBDBD;
@@ -225,21 +225,21 @@ body{
 }
 #examplesList .column{
 	float: left;
-	margin: 0 20px 0 0;
+	margin: 0 2rem 0 0;
 }
 #examplesList h3{
 	color: #f2f2f2;
 	font-size: 1.2em;
-	margin: 0 0 15px 0;
+	margin: 0 0 1.5rem 0;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.4);
 	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
 	-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.1);
 	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	padding: 0 0 5px 0;
+	padding: 0 0 0.5rem 0;
 }
 
 /* heading size */
-.section h2 {color:#fff; font-size:2.250em;}
+.section h2 {color:#fff; font-size:2rem;}
 
 /* header */
 .header-wrap {
@@ -247,26 +247,26 @@ body{
 	left:0;
 	top:0;
 	width:100%;
-	height: 78px;
+	height: 7.8rem;
 	text-align: center;
 	z-index: 9999;
 	background:#fff;
 	box-shadow: 0 0 7px rgba(0,0,0,.1)!important;
 }
-.header-menu {line-height: 75px;}
+.header-menu {line-height: 7.5rem;}
 .header-menu li {
 	display: inline-block;
-	padding-right:25px;
+	padding-right:2.5rem;
 	position:relative;
 
 }
 .header-menu li:after {
 	content:"";
-	width:1px;
-	height:20px;
+	width:0.1rem;
+	height:2rem;
 	position: absolute;
-	right:11px;
-	top:28px;
+	right:1.1rem;
+	top:2.8rem;
 	background: rgba(0,0,0,0.6);
 }
 .header-menu li:last-child:after {
@@ -274,13 +274,13 @@ body{
 }
 .header-menu li a {
 	color:#000;
-	font-size:1.125em;
+	font-size:1.6rem;
 }
 .header-menu li:hover a,
 .header-menu li:focus a
 {
 	color: rgba(0,0,0,0.6);
-	padding-bottom: 5px;
+	padding-bottom: 0.5rem;
 
 }
 .header-menu li a:before,
@@ -290,7 +290,7 @@ body{
 	background: #000;
 	content: "";
 	display: block;
-	height: 2px;
+	height: 0.2rem;
 	width: 0;
 }
 .header-menu li:hover a:before,
@@ -306,16 +306,16 @@ input.menu-ch {
 }
 input#m-menu + label {
 	position: fixed;
-	top: 30px;
-	right: 40px;
-	height: 20px;
-	width: 15px;
+	top: 3rem;
+	right: 4rem;
+	height: 2rem;
+	width: 1.5rem;
 	z-index: 5;
 }
 input#m-menu + label span {
 	position: absolute;
 	width: 100%;
-	height: 2px;
+	height: 0.2rem;
 	top: 50%;
 	margin-top: -1px;
 	left: 0;
@@ -324,10 +324,10 @@ input#m-menu + label span {
 	transition: .5s;
 }
 input#m-menu + label span:first-child {
-	top: 3px;
+	top: 0.3rem;
 }
 input#m-menu + label span:last-child {
-	top: 16px;
+	top: 1.6rem;
 }
 label:hover {
 	cursor: pointer;
@@ -349,7 +349,7 @@ input#m-menu ~ nav {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 78px;
+	height: 7.8rem;
 	z-index: 3;
 	transition: .4s;
 	transition-delay: .4s;
@@ -368,7 +368,7 @@ input#m-menu:checked ~ nav {
 	background:rgba(255,255,255,0.3);
 }
 .randing-sec {
-	padding:40px 0;
+	padding:4rem 0;
 	color: #fff;
 	background: rgba(0,0,0,0.3);
 	animation: fadein 3s;
@@ -409,28 +409,29 @@ input#m-menu:checked ~ nav {
 	}
 }
 .randing-sec h2 {
-	padding-bottom:20px;
+	padding-bottom:2rem;
 	color: #fff;
-	font-size:50px;
+	font-size:4rem;
 }
-.randing-sec p {font-size:35px;}
+.randing-sec p {font-size:3.5rem;}
 .randing-sec ul {
-	padding-top:15px;
-	font-size:25px;
+	padding-top:1.5rem;
+	font-size:2.5rem;
 }
 .sec-txt-wrap {
-	width:50%;
+	width:65%;
 	height: 100%;
-	padding-left: 200px;
+	padding-left: 14rem;
 	background:rgba(0,0,0,0.7);
 	text-align:left;
 }
 .sec-txt-wrap h2 {
-	padding-top: 150px;
+	padding-top: 13rem;
 }
 .sec-txt-wrap .sec-sub-txt {
-	width:430px;
-	padding: 20px 0;
+	width:43rem;
+	padding: 2rem 0;
+	font-size: 1.4rem;
 	color:#fff;
 }
 .sec-bg0 {
@@ -456,7 +457,7 @@ input#m-menu:checked ~ nav {
 	padding-top:3.125em;
 }
 .sec-link-area div {
-	margin-right: 20px;
+	margin-right: 2rem;
 	float: left;
 	background: #fff;
 	box-shadow: 8px 8px 40px rgba(255,255,255,0.5);
@@ -464,18 +465,18 @@ input#m-menu:checked ~ nav {
 }
 .sec-link-area div a {
 	display: inline-block;
-	width: 210px;
-	height: 320px;
-	padding:30px;
+	width: 21rem;
+	height: 24rem;
+	padding:2rem;
 	color:#000;
 }
 .sec-link-area .tit {
-	font-size:20px;
+	font-size:2rem;
 	font-weight: bold;
 }
 .sec-link-area .sub-txt {
-	font-size:19px;
-	padding-top:30px;
+	font-size:1.7rem;
+	padding-top:3rem;
 }
 .sec-link-area div:hover {
 	background: linear-gradient(130deg,#E56E77,#890014);
@@ -600,31 +601,31 @@ input#m-menu:checked ~ nav {
 .btn-classic {
 	position: relative;
 	display: inline-block;
-	width: 200px;
-	padding: 12px 0 13px 15px;
+	width: 20rem;
+	padding: 1.2rem 0 1.3rem 1.5rem;
 	background: #000;
 	color: #fff;
-	font-size: 16px;
+	font-size: 1.6rem;
 	text-align: left;
 	border: 0;
 }
 .btn-classic span {
 	display: inline-block;
-	width: 35px;
-	height: 5px;
+	width: 3.5rem;
+	height: 0.5rem;
 	position: absolute;
-	right: 12px;
-	top: 20px;
+	right: 1.2rem;
+	top: 2rem;
 	background-image: url(../img/icon-arrow-click.png);
 	background-repeat: no-repeat;
-	background-size: 35px 5px;
+	background-size: 3.5rem 0.5rem;
 }
 .btn-classic:hover {
 	background: #a50034;
 	color:#fff;
 }
 .btn-classic.center {
-	margin:30px auto 0;
+	margin:3rem auto 0;
 }
 .slide .slide-inner {
 	transition: all .4s ease-in;
@@ -643,11 +644,11 @@ input#m-menu:checked ~ nav {
 	font-size:2.813em;
 }
 .slide .slide-inner p {
-	padding-top:16px;
+	padding-top:1.6rem;
 	font-size:2.250em;
 }
 .img-email {
-	padding: 30px 0;
+	padding: 3rem 0;
 	animation: img-email 3.2s ease-out infinite;
 }
 .section-contact .fp-tableCell {vertical-align: top;}
@@ -656,33 +657,74 @@ input#m-menu:checked ~ nav {
 
 
 /* contact */
-.customoverlay {position:relative;bottom:85px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;}
-.customoverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}
-.customoverlay a {display:block;text-decoration:none;color:#000;text-align:center;border-radius:6px;font-size:14px;font-weight:bold;overflow:hidden;background: #d95050;background: #d95050 url(http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;}
-.customoverlay .title {display:block;text-align:center;background:#fff;margin-right:35px;padding:10px 15px;font-size:14px;font-weight:bold;}
-.customoverlay:after {content:'';position:absolute;margin-left:-12px;left:50%;bottom:-12px;width:22px;height:12px;background:url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
+.customoverlay {
+	position:relative;
+	bottom:6rem;
+	border-radius:6px;
+	border: 1px solid #ccc;
+	border-bottom:2px solid #ddd;
+	float:left;
+}
+.customoverlay:nth-of-type(n) {
+	border:0; box-shadow:0px 1px 2px #888;
+}
+.customoverlay a {
+	display:block;
+	text-decoration:none;
+	color:#000;
+	text-align:center;
+	border-radius:6px;
+	font-size:1.4rem;
+	font-weight:bold;
+	overflow:hidden;
+	background: #d95050;
+	background: #d95050 url(http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;
+}
+.customoverlay .title {
+	display:block;
+	text-align:center;
+	background:#fff;
+	margin-right:3.5rem;
+	padding:1rem 1.5rem;
+	font-size:1.4rem;
+	font-weight:bold;
+}
+.customoverlay:after {
+	content:'';
+	position:absolute;
+	margin-left:-1.2rem;
+	left:50%;
+	bottom:-0.7rem;
+	width:1.3rem;
+	height:0.7rem;
+	background:url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')
+}
 .contact-wrap {
 	height:100%;
 	position: relative;
 }
-.contact-info h2 {padding-top:120px; color:#000;}
-.contact-info .email {padding-bottom:10px;}
+.contact-info h2 {padding-top:12rem; color:#000;}
+.contact-info .email {padding-bottom:1rem;}
+.contact-info .email span,
+.contact-info .phone span {
+	font-size:1.5rem;
+}
 .contact-info .email em,
-.contact-info .phone em {font-size: 25px;}
+.contact-info .phone em {font-size: 2rem;}
 .wrap_content.map {
 	width:100%;
 	position: absolute;
 	left:0;
 	bottom:0;
 }
-.map-size {width: 100%; height: 500px;}
+.map-size {width: 100%; height: 25rem;}
 @-webkit-keyframes img-email {
 	0% {
 		transform: translateY(0);
 	}
 
 	50% {
-		transform: translateY(-25px);
+		transform: translateY(-2.5rem);
 	}
 
 	100% {
@@ -696,7 +738,7 @@ input#m-menu:checked ~ nav {
 	}
 
 	50% {
-		transform: translateY(-25px);
+		transform: translateY(-2.5rem);
 	}
 
 	100% {
@@ -710,7 +752,7 @@ input#m-menu:checked ~ nav {
 	}
 
 	50% {
-		transform: translateY(-25px);
+		transform: translateY(-2.5rem);
 	}
 
 	100% {
@@ -724,7 +766,7 @@ input#m-menu:checked ~ nav {
 	}
 
 	50% {
-		transform: translateY(-25px);
+		transform: translateY(-2.5rem);
 	}
 
 	100% {
@@ -738,7 +780,7 @@ input#m-menu:checked ~ nav {
 	}
 
 	50% {
-		transform: translateY(-25px);
+		transform: translateY(-2.5rem);
 	}
 
 	100% {
@@ -750,16 +792,16 @@ input#m-menu:checked ~ nav {
 .slider-down-arrow {
 	position: absolute;
 	z-index: 10;
-	bottom: 70px;
+	bottom: 7rem;
 	left: 0;
 	width: 100%;
 	text-align: center;
-	font-size: 32px;
+	font-size: 3.2rem;
 }
 @media (min-width: 1024px) {
 	.slider-down-arrow {
-		bottom: 90px;
-		font-size: 48px;
+		bottom: 1rem;
+		font-size: 4rem;
 	}
 }
 .slider-down-arrow a.bounce {
@@ -776,7 +818,7 @@ input#m-menu:checked ~ nav {
 	}
 
 	50% {
-		transform: translateY(-100px);
+		transform: translateY(-10rem);
 	}
 
 	100% {
@@ -790,7 +832,7 @@ input#m-menu:checked ~ nav {
 	}
 
 	50% {
-		transform: translateY(-100px);
+		transform: translateY(-10rem);
 	}
 
 	100% {
@@ -804,7 +846,7 @@ input#m-menu:checked ~ nav {
 	}
 
 	50% {
-		transform: translateY(-100px);
+		transform: translateY(-10rem);
 	}
 
 	100% {
@@ -818,7 +860,7 @@ input#m-menu:checked ~ nav {
 	}
 
 	50% {
-		transform: translateY(-100px);
+		transform: translateY(-10rem);
 	}
 
 	100% {
@@ -832,7 +874,7 @@ input#m-menu:checked ~ nav {
 	}
 
 	50% {
-		transform: translateY(-100px);
+		transform: translateY(-10rem);
 	}
 
 	100% {
@@ -842,12 +884,12 @@ input#m-menu:checked ~ nav {
 .txt-hidden {
 	border: 0;
 	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
+	height: 0.1rem;
+	margin: -0.1rem;
 	overflow: hidden;
 	padding: 0;
 	position: absolute;
-	width: 1px;
+	width: 0.1rem;
 	white-space: nowrap;
 }
 
@@ -858,7 +900,7 @@ input#m-menu:checked ~ nav {
 }
 .sub-cube-inner {
 	width:calc(99.99%/3);
-	height:500px;
+	height:50rem;
 	position: relative;
 }
 .sub-cube-inner.inner-01:hover {
@@ -970,14 +1012,14 @@ input#m-menu:checked ~ nav {
 .sub-cube-inner .btn-secondary
 {
 	opacity: 0;
-	font-size:30px;
+	font-size:3rem;
 	color:#fff;
 }
 .sub-cube-inner a:hover h2,
 .sub-cube-inner a:hover .btn-secondary
 {
 	opacity: 1;
-	transform: translateY(-10px);
+	transform: translateY(-1rem);
 	transition: .3s transform;
 }
 .sub-cube-inner span.btn-secondary {
@@ -988,21 +1030,21 @@ input#m-menu:checked ~ nav {
 	cursor: pointer;
 	margin-bottom: 0;
 	color:#fff;
-	font-size:20px;
+	font-size:2rem;
 }
 .btn-secondary:after {
 	content: '';
 	position: absolute;
-	bottom: -5px;
+	bottom: -0.5rem;
 	left: 0;
 	right: 0;
-	height: 3px;
+	height: 0.3rem;
 	background: #f5b21f;
 	transition: .3s left,.3s right;
 }
 .btn-secondary:hover:after {
-	left: 20px;
-	right: -20px;
+	left: 2rem;
+	right: -2rem;
 }
 .sub-detail-wrap {
 	display: flex;
@@ -1012,7 +1054,7 @@ input#m-menu:checked ~ nav {
 .sub-detail-txt
 {
 	width:50%;
-	height: 500px;
+	height: 50rem;
 }
 .sub-detail-img {
 	background-image: url("../img/bg4.jpg");
@@ -1111,13 +1153,13 @@ input#m-menu:checked ~ nav {
 {
 	content: "";
 	display: block;
-	height: 2px;
-	width: 20px;
+	height: 0.2rem;
+	width: 2rem;
 	background-color: rgb(255, 255, 255);
 	transition: all .5s ease-in;
-	margin:15px auto 0;
+	margin:1.5rem auto 0;
 }
-.sub-detail-txt .sub-txt {padding:15px 30px 0;}
+.sub-detail-txt .sub-txt {padding:1.5rem 3rem 0;}
 .sub-detail-txt.sub-bg01 {
 	background:#5f9ea0;
 }
@@ -1164,17 +1206,17 @@ input#m-menu:checked ~ nav {
 .sub-detail-txt.about-txt02 .sub-txt,
 .sub-detail-txt.about-txt03 .sub-txt
 {
-	padding:15px 50px 0;
+	padding:1.5rem 5rem 0;
 	line-height: 1.5em;
 }
 /* top button */
 a.top {
 	position: fixed;
-	right: 20px;
-	bottom: 50px;
+	right: 2rem;
+	bottom: 5rem;
 	display: none;
-	width:50px;
-	height: 50px;
+	width:5rem;
+	height: 5rem;
 	background-image: url("../img/back-to-top.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -1194,7 +1236,7 @@ a.top {
 }
 @media (min-width:1024px) {
 	.sec-link-area div a {
-		width:180px;
+		width:18rem;
 	}
 	input#m-menu + label {
 		display: none;
@@ -1208,21 +1250,21 @@ a.top {
 	.sub-detail-txt
 	{
 		width:100%;
-		height: 500px;
+		height: 50rem;
 	}
 }
 /* mobile */
 @media (max-width:768px) {
 	.sec-txt-wrap {
 		width:auto;
-		padding-left:30px;
-		padding-right: 30px;
+		padding-left:3rem;
+		padding-right: 3rem;
 	}
 	.sec-link-area div {
 		width:auto;
 		float: none;
 		margin-right: 0;
-		margin-bottom:20px;
+		margin-bottom:2rem;
 	}
 	.sec-link-area div a {
 		width:auto;
@@ -1237,9 +1279,9 @@ a.top {
 	/* contact */
 	.img-email {padding-bottom:0;}
 	/*	header */
-	.randing-sec {padding:40px 10px;}
-	.randing-sec h2 {font-size:30px;}
-	.randing-sec p {font-size:20px;}
+	.randing-sec {padding:4rem 1rem;}
+	.randing-sec h2 {font-size:3rem;}
+	.randing-sec p {font-size:2rem;}
 	.header-menu li a {
 		display: none;
 	}
@@ -1268,8 +1310,8 @@ a.top {
 	}
 	input#m-menu:checked ~ nav .header-menu li a{
 		display: block;
-		padding:20px 0;
-		font-size:30px;
+		padding:2rem 0;
+		font-size:3rem;
 	}
 	input#m-menu:checked ~ nav {
 		display: flex;
@@ -1278,7 +1320,7 @@ a.top {
 	/* map */
 	.map-size {
 		width:100%;
-		height: 300px;
+		height: 30rem;
 	}
 	/* sub page */
 	.sub-cube-inner {
@@ -1298,8 +1340,8 @@ a.top {
  * --------------------------------------- */
  #demosMenu{
 	position:fixed;
-	bottom: 10px;
-	right:10px;
+	bottom: 1rem;
+	right:1rem;
 	z-index: 999;
  }
 
