--- a/src/scss/example.scss
+++ b/src/scss/example.scss
@@ -1350,15 +1350,15 @@ input#m-menu {
   }
 
   &.skb01 {
-    background-image: url("../img/img-b-01.jpg");
+    background-image: url("../img/img-no.png");
   }
 
   &.skb02 {
-    background-image: url("../img/img-b-02.jpg");
+    background-image: url("../img/img-no.png");
   }
 
   &.skb03 {
-    background-image: url("../img/img-b-03.jpg");
+    background-image: url("../img/img-no.png");
   }
 
   &.noimg {
